[tool.poetry]
name = "spp-cognito-auth"
version = "0.1.1"
description = ""
authors = ["Sam Bryant <srbry@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Authlib = "^0.15.2"
requests = "^2.25.0"
CacheControl = "^0.12.6"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"
mypy = "^0.790"
pytest = "^6.1.2"
coverage = "^5.3"
requests-mock = "^1.8.0"
freezegun = "^1.0.0"

[tool.isort]
multi_line_output = "3"
include_trailing_comma = "True"
line_length = "88"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
